Fix tag container overflow on mobile (#179)
* fix: tag container css

* fix: margins

* fix: post list

--- a/tff-blog/Pages/Post.razor.css
+++ b/tff-blog/Pages/Post.razor.css
@@ -15,7 +15,7 @@ img {
 
 .info-container {
     display: flex;
-    flex-direction: row;
+    flex-flow: wrap;
     align-items: center;
 }
 
@@ -24,5 +24,6 @@ img {
     background: var(--secondary-color);
     color: var(--tertiary-color);
     margin-left: 0.4rem;
+    margin-bottom: 0.4rem;
     padding: 0.15rem;
 }
